feature: Add raw Playground v2

--- a/apps/docs/content/components/button.mdx
+++ b/apps/docs/content/components/button.mdx
@@ -15,3 +15,7 @@ name: button
 <Playground code={`import React from 'react';`}>
   <ButtonDemo />
 </Playground>
+
+<PlaygroundV2 knobs={{ Button: ["size", "type", "disabled"] }}>
+  {`<Button title="Button" />`}
+</PlaygroundV2>
