feature: Add raw Playground v2 (#45)
* feature: Add raw Playground v2

* feature: Add Checkbox, RadioGroup components

--- a/apps/docs/content/components/button.mdx
+++ b/apps/docs/content/components/button.mdx
@@ -12,6 +12,6 @@ name: button
   other pages.
 </Description>
 
-<Playground code={`import React from 'react';`}>
-  <ButtonDemo />
-</Playground>
+<PlaygroundV2 knobs={{ Button: ["size", "type", "disabled"] }}>
+  {`<Button title="Button" />`}
+</PlaygroundV2>
